plugins {
    id "java"
    id "jacoco"
    id "com.diffplug.spotless" version "$spotlessVersion"
    id "org.springframework.boot" version "$springBootVersion"
    id "io.spring.dependency-management" version "$springDependencyManagementVersion"
    id "com.google.protobuf" version "$protobufGradlePluginVersion"
}

group = "bot.finance"
version = "${appVersion}"
description = "ledger-service"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        proto {
            srcDir("$rootDir/../proto")
        }
    }
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:${protobufVersion}"
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
        }
    }
    generateProtoTasks {
        all().configureEach {
            plugins {
                grpc {}
            }
        }
    }
}

dependencies {
    implementation platform("org.springframework.ai:spring-ai-bom:${springAiVersion}")
    implementation "org.springframework.ai:spring-ai-starter-mcp-server-webmvc"

    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-data-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-flyway"
    implementation "org.springframework.boot:spring-boot-starter-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
    implementation "org.springframework.boot:spring-boot-starter-webmvc"
    implementation "org.springframework.boot:spring-boot-starter-webflux"

    implementation "io.swagger.core.v3:swagger-annotations:${swaggerAnnotationsVersion}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"

    // Database
    implementation "org.flywaydb:flyway-database-postgresql"
    implementation "org.postgresql:postgresql"

    // Telegram Bot API
    implementation "com.github.pengrad:java-telegram-bot-api:${pengradTelegramBotApiVersion}"

    implementation "org.springframework.boot:spring-boot-starter-grpc-client"
    implementation "io.grpc:grpc-services"

    testImplementation "io.grpc:grpc-testing"

    testImplementation "org.springframework.boot:spring-boot-starter-actuator-test"
    testImplementation "org.springframework.boot:spring-boot-starter-data-jdbc-test"
    testImplementation "org.springframework.boot:spring-boot-starter-flyway-test"
    testImplementation "org.springframework.boot:spring-boot-starter-jdbc-test"
    testImplementation "org.springframework.boot:spring-boot-starter-security-test"
    testImplementation "org.springframework.boot:spring-boot-starter-webmvc-test"
    testImplementation "org.springframework.boot:spring-boot-testcontainers"

    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
    testImplementation "io.rest-assured:json-path:${restAssuredVersion}"

    testImplementation "org.testcontainers:testcontainers-junit-jupiter"
    testImplementation "org.testcontainers:testcontainers-postgresql"

    testImplementation "org.wiremock:wiremock-standalone:${wiremockVersion}"
    testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
    testImplementation "com.tngtech.archunit:archunit-junit5:${archunitVersion}"

    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

test {
    useJUnitPlatform()
}

jacoco {
    toolVersion = "${jacocoVersion}"
}

spotless {
    java {
        target "src/main/java/**/*.java", "src/test/java/**/*.java"
        palantirJavaFormat("${palantirJavaFormatVersion}")
        removeUnusedImports()
        importOrder()
    }
}
